# picosdk-c-examples

./: .gitattributes  .gitignore  LICENSE.md  README.md  ps3000E
.github/: issue_template.md
picohrdl/: picohrdlCExamples.sln
picohrdl/linux-build-files/: Makefile.am  configure.ac
picohrdl/picohrdlCon/: picohrdlCon.c  picohrdlCon.vcxproj  picohrdlcon.c
pl1000/: pl1000CExamples.sln  pl1000Con.sln  pl1000Con.vcxproj  pl1000con.c
pl1000/linux-build-files/: Makefile.am  configure.ac
pl1000/pl1000Con/: pl1000Con.c  pl1000Con.vcxproj
plcm3/: plcm3CExamples.sln  plcm3Con.sln  plcm3Con.vcxproj  plcm3con.c  plcm3con.vcxproj
plcm3/linux-build-files/: Makefile.am  configure.ac
plcm3/plcm3CExamples/: plcm3Con.c  plcm3Con.vcxproj
ps2000/: ps2000CExamples.sln
ps2000/linux-build-files/: Makefile.am  configure.ac
ps2000/ps2000Con/: ps2000Con.c  ps2000Con.vcxproj  ps2000con.c
ps2000/ps2000Gui/: ps2000Gui.aps  ps2000Gui.c  ps2000Gui.vcxproj  ps2000gui.c  resource.h
ps2000/ps2000con/: ps2000con.c  ps2000con.vcxproj
ps2000/ps2000gui/: ps2000gui.c  ps2000gui.rc  ps2000gui.vcxproj  resource.h
ps2000a/: ps2000aCon.sln  ps2000aCon.vcxproj  ps2000acon.c  ps2000acon.vcxproj
ps2000a/linux-build-files/: Makefile.am  configure.ac
ps2000a/ps2000aCon/: ps2000aCon.c
ps3000/: ps3000CExamples.sln  ps3000Con.sln  ps3000Con.vcxproj
ps3000/linux-build-files/: Makefile.am  configure.ac
ps3000/ps3000Con/: ps3000Con.c  ps3000Con.vcxproj  ps3000con.c
ps3000/ps3000Gui/: ps3000Gui.c  ps3000Gui.rc  ps3000Gui.rch  ps3000Gui.vcxproj
ps3000a/: ps3000aCExamples.sln  ps3000aCon.sln  ps3000aCon.vcxproj  ps3000acon.c  ps3000acon.vcxproj
ps3000a/linux-build-files/: Makefile.am  autogen.sh  configure.ac
ps3000a/ps3000aCon/: ps3000aCon.c  ps3000aCon.vcxproj
ps4000/: ps4000Con.sln  ps4000Con.vcxproj  ps4000con.c  ps4000con.vcxproj
ps4000/linux-build-files/: Makefile.am  configure.ac
ps4000/ps4000Con/: ps4000Con.c  ps4000Con.vcxproj
ps4000a/: ps4000aCExamples.sln
ps4000a/linux-build-files/: Makefile.am  configure.ac
ps4000a/ps4000aCon/: ps4000aCon.c  ps4000aCon.vcxproj  ps4000acon.c
ps4000a/ps4000aGraphicalMultiplsScopesInParallel/: CppCLR_WinformsProjekt.cpp  Form1.h  app.aps  ps4000aGraphicalMultiplsScopesInParallel.sln  ps4000aGraphicalMultiplsScopesInParallel.vcxproj  ps4000aGraphicalMultiplsScopesInParallel.vcxproj.filters  structImport.h
ps4000a/ps4000aMultipleScopesInParallel/: ps4000aMultipleScopesInParallel.cpp  ps4000aMultipleScopesInParallel.sln  ps4000aMultipleScopesInParallel.vcxproj  ps4000aMultipleScopesInParallel.vcxproj.filters
ps4000a/ps4000aStreaming/: ps4000aStreaming.cpp  ps4000aStreaming.vcxproj  ps4000astreaming.cpp
ps5000/: ps5000Con.sln  ps5000Con.vcxproj  ps5000con.c
ps5000a/: ps5000aCExamples.sln  ps5000aCon.sln  ps5000aCon.vcxproj  ps5000acon.c
ps6000/: ps6000CExamples.sln  ps6000Con.sln  ps6000Con.vcxproj  ps6000con.c
ps6000a/: ps6000aCExamples.sln
ps6000a-NEW/: ps6000aCExamples.sln
psospa/: psospaCExamples.sln
psospa/shared/: Libpsospa.c  (+7 more)
shared/: PicoBuffers.c  PicoBuffers.h  PicoFileFunctions.c  PicoFileFunctions.h  PicoScaling.c  PicoScaling.h  PicoUnit.h
usbdrdaq/: usbdrdaqCExamples.sln  usbdrdaqCon.c  usbdrdaqCon.sln  usbdrdaqCon.vcxproj  usbdrdaqcon.c
usbpt104/: usbpt104CExamples.sln  usbpt104Con.sln  usbpt104con.c  usbpt104con.vcxproj
usbtc08/: usbtc08CExamples.sln
(+108 files in other folders)
